[package]
name = "fish-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
derive_more = "0.99.17"
env_logger = "0.9.3"
fastrand = "1.8.0"
itertools = "0.10.5"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
typeshare = "1.0.0"

# [profile.release]
# debug = true
